# tokuteigino

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  mobile-test-instructions.md  supabase-auth-issue.md  supabase_auth_feature_issue.md  設計書.md
.claude/: .gitignore
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-epic.md  02-feature.md  03-task.md  04-bug.md  05-refactor.md  06-test.md  config.yml
.github/issue-templates/: ci-cd-pipeline.md  dependencies-quality.md  mock-environment.md  project-structure.md  test-framework.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  e2e-tests.yml  epic-to-features.yml  gemini-code-review.yml  test.yml
backend/: Dockerfile  Dockerfile.test  README.md  main.py  pyproject.toml
backend/app/: database.py  models.py  utils.py
backend/app/routers/: materials.py
backend/tests/: conftest.py  test_basic_endpoints.py  test_e2e_pdf_upload.py  test_integration_materials.py  test_main.py  test_pdf_upload.py  test_simple_api.py  test_simple_auth.py  test_text_extraction.py
docker/: docker-compose.test.yml  nginx.conf
docs/: E2E_PRODUCTION_TESTING.md  SUPABASE_SETUP.md
frontend/: .env.test  Dockerfile  README.e2e.md  README.md  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  vitest.config.ts
frontend-expo-backup/: App.js  Dockerfile  Dockerfile.test  app.json  package.json
frontend/e2e/: basic.spec.ts  debug-validation.spec.ts  debug.spec.ts  docker.config.ts  global-setup.ts
scripts/: check-docker.sh  dev.sh
supabase/: .gitignore  config.toml  seed.sql
types/: supabase.ts
(+63 files in other folders)
